--- a/.github/actions/use-android-emulator/action.yml
+++ b/.github/actions/use-android-emulator/action.yml
@@ -31,7 +31,7 @@ runs:
     - name: '💿 Setup Android Emulator #1'
       id: retries-1
       continue-on-error: true
-      uses: reactivecircus/android-emulator-runner@v2
+      uses: ./.github/actions/android-emulator-runner
       with:
         api-level: ${{ inputs.avd-api }}
         avd-name: ${{ inputs.avd-name }}
@@ -61,7 +61,7 @@ runs:
       id: retries-2
       continue-on-error: true
       if: steps.retries-1.outcome == 'failure'
-      uses: reactivecircus/android-emulator-runner@v2
+      uses: ./.github/actions/android-emulator-runner
       with:
         api-level: ${{ inputs.avd-api }}
         avd-name: ${{ inputs.avd-name }}
@@ -91,7 +91,7 @@ runs:
       id: retries-3
       # continue-on-error: true
       if: steps.retries-2.outcome == 'failure'
-      uses: reactivecircus/android-emulator-runner@v2
+      uses: ./.github/actions/android-emulator-runner
       with:
         api-level: ${{ inputs.avd-api }}
         avd-name: ${{ inputs.avd-name }}
