--- a/.github/workflows/android-instrumentation-tests.yml
+++ b/.github/workflows/android-instrumentation-tests.yml
@@ -36,11 +36,12 @@ concurrency:
 
 jobs:
   test:
-    runs-on: macos-13
+    runs-on: expo-large-nested-virt
     timeout-minutes: 150
     env:
       ORG_GRADLE_PROJECT_reactNativeArchitectures: x86_64
       GRADLE_OPTS: -Dorg.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=1024m
+      ANDROID_HOME: /home/runner/.android
     strategy:
       matrix:
         api-level: [33]
@@ -53,6 +54,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Create ANDROID_HOME
+        run: mkdir ~/.android
       - name: 🔨 Use JDK 17
         uses: actions/setup-java@v3
         with:
